Upload mtb-example-optiga-crypto [3170]

--- a/.cyignore
+++ b/.cyignore
@@ -7,16 +7,20 @@ documents
 .vscode
 
 # Not required PALs
-$(SEARCH_optiga-trust-m)/pal/NEW_PAL_TEMPLATE
-$(SEARCH_optiga-trust-m)/pal/esp32_freertos
-$(SEARCH_optiga-trust-m)/pal/libusb
-$(SEARCH_optiga-trust-m)/pal/linux
-$(SEARCH_optiga-trust-m)/pal/xmc4800
-$(SEARCH_optiga-trust-m)/pal/xmc4800_freertos
+$(SEARCH_optiga-trust-m)/extras/pal/NEW_PAL_TEMPLATE
+$(SEARCH_optiga-trust-m)/extras/pal/esp32_freertos
+$(SEARCH_optiga-trust-m)/extras/pal/libusb
+$(SEARCH_optiga-trust-m)/extras/pal/linux
+$(SEARCH_optiga-trust-m)/extras/pal/xmc4800
+$(SEARCH_optiga-trust-m)/extras/pal/xmc4800_freertos
+$(SEARCH_optiga-trust-m)/extras/pal/zephyr
+$(SEARCH_optiga-trust-m)/extras/pal/test_pal
+$(SEARCH_optiga-trust-m)/extras/pal/linux_uart
+$(SEARCH_optiga-trust-m)/extras/pal/windows_uart
 
 # Not required Crypto midlayers
-$(SEARCH_optiga-trust-m)/pal/pal_crypt_openssl.c
-$(SEARCH_optiga-trust-m)/pal/pal_crypt_wolfssl.c
+$(SEARCH_optiga-trust-m)/extras/pal/pal_crypt_openssl.c
+$(SEARCH_optiga-trust-m)/extras/pal/pal_crypt_wolfssl.c
 
 # Not required mbedtls wrapers
 $(SEARCH_optiga-trust-m)/examples/mbedtls_port
@@ -25,6 +29,7 @@ $(SEARCH_optiga-trust-m)/examples/mbedtls_port
 $(SEARCH_optiga-trust-m)/examples/tools
 
 # Not required executeable for tools
+$(SEARCH_optiga-trust-m)/tests
 $(SEARCH_optiga-trust-m)/examples/utilities/authenticate_chip
 $(SEARCH_optiga-trust-m)/examples/utilities/pkcs11_trustm.c
 $(SEARCH_optiga-trust-m)/examples/utilities/trustm_chipinfo.c
@@ -53,3 +58,14 @@ $(SEARCH_optiga-trust-m)/examples/optiga/example_optiga_crypt_tls_prf_sha256.c
 $(SEARCH_optiga-trust-m)/examples/optiga/usecases/example_optiga_hmac_verify_with_authorization_reference.c
 $(SEARCH_optiga-trust-m)/examples/optiga/usecases/example_pair_host_and_optiga_using_pre_shared_secret.c
 $(SEARCH_optiga-trust-m)/examples/optiga/usecases/example_read_coprocessor_id.c
+
+# Not required MbedTLS folders
+$(SEARCH_optiga-trust-m)/external/mbedtls/3rdparty
+$(SEARCH_optiga-trust-m)/external/mbedtls/ChangeLog.d
+$(SEARCH_optiga-trust-m)/external/mbedtls/configs
+$(SEARCH_optiga-trust-m)/external/mbedtls/docs
+$(SEARCH_optiga-trust-m)/external/mbedtls/doxygen
+$(SEARCH_optiga-trust-m)/external/mbedtls/programs
+$(SEARCH_optiga-trust-m)/external/mbedtls/scripts
+$(SEARCH_optiga-trust-m)/external/mbedtls/tests
+$(SEARCH_optiga-trust-m)/external/mbedtls/visualc
